# bluegrass

./: .gitignore  .gitmodules  README.md  fp-lib-table  stm32-battery-power.kicad_sch  stm32-battery.kicad_pcb  stm32-battery.kicad_pro  stm32-battery.kicad_sch
battery-logger/: platformio.ini
battery-logger/boards/: bluegrass_rev1.json
battery-logger/src/: main.cpp
blink/: platformio.ini
blink/src/: main.c
blink/variants/bluegrass_rev1/: variant_BLUEGRASS_REV1.cpp  variant_BLUEGRASS_REV1.h
hardware/: .gitignore  jlcpcb-component-overrides.json  local-symbols.kicad_sym  sym-lib-table
hardware/local-footprints.pretty/: MAX17048-TDFN-8.kicad_mod  Rakeri-10mm.kicad_mod  SOFNG-TF-15x15.kicad_mod  TS-1187A-B-A-B.kicad_mod
hardware/local-models/: README.md  tps63020dsjr.wrl
kitchensink/: git-revision.py  platformio.ini
kitchensink/src/: AnalogInput.cpp  CoreMark.cpp  FuelGauge.cpp  Gpio.cpp  I2CBus.cpp  Interact.cpp  Interact.h  Led.cpp  Matcher.cpp  Rtc.cpp  Sd.cpp  Tester.cpp  Vbus.cpp  core_portme.c  core_portme.h  draw-bmp.cpp  kitchensink.h  main.cpp  pin-lookup.cpp  tom-thumb.h
kitchensink/variants/bluegrass_rev1/: variant_BLUEGRASS_REV1.h
local-footprints.pretty/: JLCPCB-tooling-hole.kicad_mod  SWPA6020S.kicad_mod  Texas_R-PVSON-N14_ThermalVias.kicad_mod
logo/: README.md
rust-blink/: .gitignore  Cargo.toml  README.md  memory.x
rust-blink/.cargo/: config.toml
rust-blink/src/: main.rs
tools/: kicad-pos-to-cpl.py
