[package]
name = "rust-blink"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = "0.2.7"
nb = "1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32f1xx-hal = { version = "0.10", features = ["rt", "stm32f103", "medium"] }
usb-device = "0.2"
usbd-serial = "0.1"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
panic = "abort"
